--- a/wasm-runtime/Dockerfile
+++ b/wasm-runtime/Dockerfile
@@ -2,7 +2,7 @@ FROM --platform=$BUILDPLATFORM tinygo/tinygo:0.26.0 AS build
 WORKDIR /build
 COPY main.go .
 RUN GOOS=js GOARCH=wasm go generate main.go
-RUN tinygo build -o main.wasm --target wasm --no-debug main.go
+RUN tinygo build -o main.wasm -target wasi -wasm-abi=generic --no-debug main.go
 
 FROM scratch
 COPY --from=build /build/wasm_exec.js ./wasm_exec.js
